--- a/schemas/common/visual-style.yaml
+++ b/schemas/common/visual-style.yaml
@@ -51,3 +51,14 @@ properties:
         type: string
         enum: [left, center, right]
         description: Text alignment for overlay text.
+  box:
+    type: object
+    properties:
+      color:
+        type: string
+        description: Color of the text box background (e.g., "#000000").
+      alpha:
+        type: integer
+        minimum: 0
+        maximum: 255
+        description: Alpha transparency for the text box background (0=transparent, 255=opaque).
