--- a/schemas/media.yaml
+++ b/schemas/media.yaml
@@ -1,5 +1,5 @@
 # Media Model Spec
-# This YAML defines the Cosmos DB document structure for media files
+# Updated to match latest backend and frontend models
 
 MediaDocument:
   type: object
@@ -7,7 +7,6 @@ MediaDocument:
     - id
     - userId
     - brandId
-    - fileName
     - blobUrl
     - mediaType
     - metadata
@@ -19,8 +18,6 @@ MediaDocument:
     userId:
       type: string
     brandId:
-      type: string
-    fileName:
       type: string
     blobUrl:
       type: string
@@ -39,22 +36,131 @@ MediaDocument:
 MediaMetadata:
   type: object
   properties:
-    name:
+    fileName:
       type: string
     description:
+      type: string
+    suggestedName:
       type: string
     tags:
       type: array
       items:
-        type: string
+        $ref: '#/CognitiveTag'
+    categories:
+      type: array
+      items:
+        $ref: '#/CognitiveCategory'
+    objects:
+      type: array
+      items:
+        $ref: '#/CognitiveObject'
+    caption:
+      $ref: '#/CognitiveCaption'
+    denseCaptions:
+      type: array
+      items:
+        $ref: '#/CognitiveDenseCaption'
+    brands:
+      type: array
+      items:
+        $ref: '#/CognitiveBrand'
+    people:
+      type: array
+      items:
+        $ref: '#/CognitivePerson'
+    ocrText:
+      type: string
     cognitiveData:
       type: object
       additionalProperties: true
 
+CognitiveTag:
+  type: object
+  properties:
+    name:
+      type: string
+    confidence:
+      type: number
+
+CognitiveCategory:
+  type: object
+  properties:
+    name:
+      type: string
+    confidence:
+      type: number
+
+CognitiveObject:
+  type: object
+  properties:
+    object:
+      type: string
+    confidence:
+      type: number
+    rectangle:
+      $ref: '#/Rectangle'
+
+CognitiveCaption:
+  type: object
+  properties:
+    text:
+      type: string
+    confidence:
+      type: number
+
+CognitiveDenseCaption:
+  type: object
+  properties:
+    text:
+      type: string
+    confidence:
+      type: number
+    boundingBox:
+      $ref: '#/Rectangle'
+
+CognitiveBrand:
+  type: object
+  properties:
+    name:
+      type: string
+    confidence:
+      type: number
+
+CognitivePerson:
+  type: object
+  properties:
+    confidence:
+      type: number
+    rectangle:
+      $ref: '#/Rectangle'
+
+Rectangle:
+  type: object
+  properties:
+    x:
+      type: number
+    y:
+      type: number
+    w:
+      type: number
+    h:
+      type: number
+
+MediaCreate:
+  type: object
+  properties:
+    brandId:
+      type: string
+    fileName:
+      type: string
+    mediaType:
+      type: string
+      enum: [image, video]
+
 MediaUpdate:
   type: object
   properties:
-    metadata:
-      $ref: '#/MediaMetadata'
     fileName:
       type: string
+    metadata:
+      $ref: '#/MediaMetadata'
