--- a/schemas/common/fonts.yaml
+++ b/schemas/common/fonts.yaml
@@ -1,59 +1,59 @@
 # Font definitions for use by both backend and frontend
 fonts:
   - family: Arial
-    displayName: Arial
+    display_name: Arial
     styles:
       regular: https://storautogensocial.blob.core.windows.net/fonts/Arial.ttf
       bold: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Bold.ttf
       italic: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Italic.ttf
       bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Bold%20Italic.ttf
   - family: Arial Narrow
-    displayName: Arial Narrow
+    display_name: Arial Narrow
     styles:
       regular: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Narrow.ttf
       bold: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Narrow%20Bold.ttf
       italic: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Narrow%20Italic.ttf
       bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Arial%20Narrow%20Bold%20Italic.ttf
   - family: Comic Sans MS
-    displayName: Comic Sans MS
+    display_name: Comic Sans MS
     styles:
       regular: https://storautogensocial.blob.core.windows.net/fonts/Comic%20Sans%20MS.ttf
       bold: https://storautogensocial.blob.core.windows.net/fonts/Comic%20Sans%20MS%20Bold.ttf
   - family: Courier New
-    displayName: Courier New
+    display_name: Courier New
     styles:
       regular: https://storautogensocial.blob.core.windows.net/fonts/Courier%20New.ttf
       bold: https://storautogensocial.blob.core.windows.net/fonts/Courier%20New%20Bold.ttf
       italic: https://storautogensocial.blob.core.windows.net/fonts/Courier%20New%20Italic.ttf
       bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Courier%20New%20Bold%20Italic.ttf
   - family: Georgia
-    displayName: Georgia
+    display_name: Georgia
     styles:
       regular: https://storautogensocial.blob.core.windows.net/fonts/Georgia.ttf
       bold: https://storautogensocial.blob.core.windows.net/fonts/Georgia%20Bold.ttf
       italic: https://storautogensocial.blob.core.windows.net/fonts/Georgia%20Italic.ttf
       bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Georgia%20Bold%20Italic.ttf
   - family: Tahoma
-    displayName: Tahoma
+    display_name: Tahoma
     styles:
       regular: https://storautogensocial.blob.core.windows.net/fonts/Tahoma.ttf
       bold: https://storautogensocial.blob.core.windows.net/fonts/Tahoma%20Bold.ttf
   - family: Times New Roman
-    displayName: Times New Roman
+    display_name: Times New Roman
     styles:
       regular: https://storautogensocial.blob.core.windows.net/fonts/Times%20New%20Roman.ttf
       bold: https://storautogensocial.blob.core.windows.net/fonts/Times%20New%20Roman%20Bold.ttf
       italic: https://storautogensocial.blob.core.windows.net/fonts/Times%20New%20Roman%20Italic.ttf
       bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Times%20New%20Roman%20Bold%20Italic.ttf
   - family: Trebuchet MS
-    displayName: Trebuchet MS
+    display_name: Trebuchet MS
     styles:
       regular: https://storautogensocial.blob.core.windows.net/fonts/Trebuchet%20MS.ttf
       bold: https://storautogensocial.blob.core.windows.net/fonts/Trebuchet%20MS%20Bold.ttf
       italic: https://storautogensocial.blob.core.windows.net/fonts/Trebuchet%20MS%20Italic.ttf
       bold_italic: https://storautogensocial.blob.core.windows.net/fonts/Trebuchet%20MS%20Bold%20Italic.ttf
   - family: Verdana
-    displayName: Verdana
+    display_name: Verdana
     styles:
       regular: https://storautogensocial.blob.core.windows.net/fonts/Verdana.ttf
       bold: https://storautogensocial.blob.core.windows.net/fonts/Verdana%20Bold.ttf
