--- a/schemas/content-types/multi-image.yaml
+++ b/schemas/content-types/multi-image.yaml
@@ -18,7 +18,7 @@ properties:
   format:
     type: object
     properties:
-      aspectRatio:
+      aspect_ratio:
         type: string
         enum: [square, portrait, landscape]
         default: square
@@ -27,10 +27,10 @@ properties:
         type: boolean
         default: true
         description: Whether all images must have the same dimensions
-      maxFileSize:
+      max_file_size:
         type: integer
         description: Maximum file size per image in bytes
-  perImageText:
+  per_image_text:
     type: boolean
     default: false
     description: Whether each image can have its own caption/description
@@ -42,7 +42,7 @@ properties:
         enum: [slide, fade, none]
         default: slide
         description: Type of transition between images
-      autoPlay:
+      auto_play:
         type: boolean
         default: false
         description: Whether to auto-advance through images
