--- a/components/responses.yaml
+++ b/components/responses.yaml
@@ -108,15 +108,15 @@ BrandResponse:
         brandInfo:
           name: "Acme Corporation"
           description: "Leading provider of innovative solutions"
-          userId: "user-123"
-        socialAccounts:
+          user_id: "user-123"
+        social_accounts:
           instagram:
             enabled: true
             username: "@acmecorp"
-            accessToken: "instagram_token"
-            expiresAt: "2025-04-10T12:00:00Z"
-        createdAt: "2025-01-01T00:00:00Z"
-        updatedAt: "2025-04-10T12:00:00Z"
+            access_token: "instagram_token"
+            expires_at: "2025-04-10T12:00:00Z"
+        created_at: "2025-01-01T00:00:00Z"
+        updated_at: "2025-04-10T12:00:00Z"
 
 BrandListResponse:
   description: Successfully retrieved list of brands
